lab/ingress/httpbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  selector:
    app: httpbin

  ports:
    - name: http
      port: 8000
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-node-port
  labels:
    app: httpbin-node-port
spec:
  type: NodePort

  selector:
    app: httpbin

  ports:
    - name: http
      port: 8080
      targetPort: 80
      nodePort: 32080
