lab/ingress/httpbin/ingress-tls-wildcard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-tls-wildcard-full-chain
spec:
  ingressClassName: "nginx"

  tls:
    - hosts:
        - echo.sandbox.wasp.silvios.me
      secretName: tls-wildcard-full-chain
  
  rules:
    - host: echo.sandbox.wasp.silvios.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
